--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-products></app-products>
-  
+<!--  <app-products></app-products> -->
+<h1>Inventory manager</h1>
+<nav>
+  <a routerLink="">Home</a>
+  <a routerLink="products"> Products</a>
+</nav>
+<router-outlet></router-outlet>
